# mock-openai

./: Cargo.toml  Dockerfile  README.md  build.rs  dist-workspace.toml  oha.sh  test.ipynb
.github/workflows/: ci.yml  docker-publish.yml  release.yml
assets/: README.md
benches/: format_vs_push.rs  template_bench.rs
src/: args.rs  common.rs  lib.rs  main.rs  routes.rs  stream.rs  template.rs
