[package]
name = "mock-openai"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/wheynelau/mock-openai"
description = "A mock OpenAI API server for testing purposes"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.4"
clap = { version = "4.5.49", features = ["derive"] }
duration-string = "0.5.3"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.26"
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.14"
tokenizers = { version = "0.22.1", features = ["hf-hub", "http"]}
tower-http = { version = "0.6.6", features = ["trace"] }
regex = "1.11.1"
rand = "0.9.1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"], default-features = false }
axum-extra = { version = "0.10.3", features = ["typed-header"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
