[package]
name = "mock-openai"
version = "0.4.0-beta.1"
edition = "2024"
repository = "https://github.com/wheynelau/mock-openai"
description = "A mock OpenAI API server for testing purposes"
license = "MIT"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.49", features = ["derive"] }
duration-string = "0.5.3"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.6.6", features = ["trace"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }

[build-dependencies]
tokenizers = "0.22.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
