[package]
name = "mock-openai"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/wheynelau/mock-openai"
description = "A mock OpenAI API server for testing purposes"
license = "MIT"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.0", features = ["derive", "env"] }
duration-string = "0.5.3"
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["trace"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }

[build-dependencies]
tokenizers = "0.22.2"
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.8.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1

[[bench]]
name = "template_bench"
harness = false

[[bench]]
name = "format_vs_push"
harness = false
